[package]
name = "glp"
version = "0.1.0"
edition = "2021"
description = "GitLab Pipeline CLI"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
thiserror = "2"
colored = "2"
url = "2"
urlencoding = "2"
dirs = "5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
