[package]
name = "glp"
version = "0.1.3"
edition = "2021"
description = "GitLab Pipeline CLI"
license = "MIT"
repository = "https://github.com/devinbarry/glp"
homepage = "https://github.com/devinbarry/glp"
readme = "README.md"
keywords = ["gitlab", "ci", "pipeline", "cli", "devops"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
thiserror = "2"
colored = "2"
url = "2"
urlencoding = "2"
dirs = "5"

[dev-dependencies]
serial_test = "3"
mockito = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
